--- a/Xcelerate/Views/_ViewImports.cshtml
+++ b/Xcelerate/Views/_ViewImports.cshtml
@@ -7,3 +7,4 @@
 @using Xcelerate.Core.Models.Account.UserProfile;
 @using Xcelerate.Core.Models.UserCars;
 @using Xcelerate.Core.Models.Review;
+@using Xcelerate.Core.Models.Home;
