--- a/Xcelerate/wwwroot/css/UserCars/Index.css
+++ b/Xcelerate/wwwroot/css/UserCars/Index.css
@@ -242,3 +242,8 @@ body {
     font-size: 18px;
     text-decoration: none;
 }
+
+.sell-delete-info-buttons {
+    display: flex;
+    align-items: center;
+}
