--- a/Xcelerate/wwwroot/css/Account/Register/Register.css
+++ b/Xcelerate/wwwroot/css/Account/Register/Register.css
@@ -51,26 +51,6 @@ svg {
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
 
-
-#minimizeIcon-register {
-    position: inherit;
-    right: 1px;
-    margin: 4px 4px 0px 0px;
-    padding: 1px;
-    width: 50px;
-    height: 50px;
-    border-radius: 40px;
-    backdrop-filter: blur(2px);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
-    border-color: black;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
-    transition: opacity 0.5s; /* Add a transition effect */
-}
-
 .card-content {
     display: flex;
     padding: 0px 60px 0px 60px;
@@ -120,6 +100,7 @@ input {
 
 button {
     border-radius: 24px;
+    margin-bottom: 20px;
     padding: 10px;
     width: 150px;
     height: 40px;
@@ -233,7 +214,7 @@ button {
     background-repeat: no-repeat;
     background-size: cover;
     width: 550px;
-    height: 560px;
+    min-height: calc(100% + 20px);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7px);
     transition: opacity 0.5s; /* Add a transition effect */
