--- a/Xcelerate/wwwroot/css/Home/HomePage/HomePage.css
+++ b/Xcelerate/wwwroot/css/Home/HomePage/HomePage.css
@@ -37,7 +37,7 @@ body {
     text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.news-text {
+.news-section-text {
     color: white;
     font-size: 30px;
     text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
@@ -62,11 +62,6 @@ body {
 
 
 
-ol li strong, ol li p {
-    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
-    color: white;
-    font-size: 17px;
-}
 
 /* @keyframes changeColor {
   0% { color: #ffffff; }
@@ -101,4 +96,63 @@ span {
 
 svg {
     display: none;
+}
+
+.site-statistics {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.stats {
+    display: flex;
+    gap: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 10px;
+    list-style: none;
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 17px;
+    flex-direction: row-reverse;
+}
+
+.news-title {
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    color: whitesmoke;
+    font-size: 19px;
+}
+
+.news-content {
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 17px;
+}
+
+.pagination-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.page-list {
+    display: flex;
+    gap: 35px;
+    list-style: none;
+}
+
+.page-item a {
+    color: white;
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.page-link {
+    border-radius: 12px;
+    padding: 15px;
+    background: none;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+    font-size: 18px;
+    text-decoration: none;
 }
