Added more seeded cars.

--- a/Xcelerate/wwwroot/css/UserCars/Index.css
+++ b/Xcelerate/wwwroot/css/UserCars/Index.css
@@ -221,7 +221,7 @@ body {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
-    background-color: darkred;
+    background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
     border-radius: 25px;
     text-decoration: none;
     position: absolute;
